src/parser/test/parser-tests-gen/data/good/good-57.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: [Seed1]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type1_prop_1": {},
        "type1_bool_1": true
      }
    properties:
      type1_bool_1:
        type: boolean
      type1_prop_1:
        type: object
  Type2:
    type: Type1|Seed2
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type1_prop_1": {},
        "type1_bool_1": true
      }
  Type3:
    type: [Seed41]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type3_prop_2": {},
        "type3_prop_1": {}
      }
    properties:
      type3_prop_1:
        type: object
      type3_prop_2:
        type: object
  Type4:
    type: object|object
    example: {}
  Type5:
    type: [Type4,Seed41]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1
      }
  Type6:
    type: [Type5]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1
      }
  Type7:
    type: [Type6,Type5]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1
      }
  Type8:
    type: [Seed41]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type8_bool_1": true,
        "type8_prop_1": {}
      }
    properties:
      type8_prop_1:
        type: object
      type8_bool_1:
        type: boolean
  Type9:
    type: [Seed3]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type9_str_1": "str",
        "type9_prop_1": true
      }
    properties:
      type9_prop_1:
        type: (boolean)
      type9_str_1:
        type: string
  Type10:
    type: Type4|object
    example: {}

/res1:
  post:
    body:
      application/json:
        type: [Type5]
        example: {}
/res2:
  post:
    body:
      application/json:
        type: [Type1]
        example: |
          {
            "str1": "str",
            "num1": 1,
            "type1_bool_1": true,
            "type1_prop_1": {}
          }
/res3:
  post:
    body:
      application/json:
        type: object
        example: {}
/res4:
  post:
    body:
      application/json:
        type: object
        example: {}
/res5:
  post:
    body:
      application/json:
        type: [Type7,Seed3]
        example: |
          {
            "str3": "str",
            "num3": 1
          }
