src/parser/test/parser-tests-gen/data/bad/bad-72.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: object
    example: |
      {
        "type1_prop_1": {},
        "type1_bool_1": true
      }
    properties:
      type1_bool_1:
        type: boolean
      type1_prop_1:
        type: object
  Type2:
    type: [Seed1,Seed2]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str2": "str",
        "num2": 1,
        "type2_num_1": 1,
        "type2_prop_1": "str"
      }
    properties:
      type2_prop_1:
        type: (string|number)
      type2_num_1:
        type: number
  Type3:
    type: [Seed3]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type3_prop_2": {},
        "type3_prop_1": {}
      }
    properties:
      type3_prop_1:
        type: object
      type3_prop_2:
        type: object
  Type4:
    type: [Seed1,Seed3]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str3": "str",
        "num3": 1,
        "type4_prop_1": "str",
        "type4_num_1": 1
      }
    properties:
      type4_num_1:
        type: number
      type4_prop_1:
        type: Seed3
  Type5:
    type: object|Seed41
    example: {}
  Type6:
    type: Seed2|object
    example: |
      {
        "str2": "str",
        "num2": 1
      }
  Type7:
    type: Seed1|Seed2
    example: |
      {
        "str1": "str",
        "num1": 1
      }
  Type8:
    type: [Type7,Type6]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str2": "str",
        "num2": 1
      }
  Type9:
    type: [Type5]
    example: {}
  Type10:
    type: Seed1
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type10_bool_1": true,
        "type10_str_1": "str"
      }
    properties:
      type10_str_1:
        type: string
      type10_bool_1:
        type: boolean

/res1:
  post:
    body:
      application/json:
        type: object|object
        example: {}
/res2:
  post:
    body:
      application/json:
        type: [Type3,Type9]
        example: |
          {
            "str3": "str",
            "num3": 1,
            "type3_prop_1": {},
            "type3_prop_2": {}
          }
/res3:
  post:
    body:
      application/json:
        type: Seed3|object
        example: |
          {
            "str3": "str",
            "num3": 1
          }
/res4:
  post:
    body:
      application/json:
        type: [Type8,Seed3]
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str3": "str",
            "num3": 1
          }
/res5:
  post:
    body:
      application/json:
        type: [Seed2]
        example: |
          {
            "str2": "str",
            "num2": 1
          }
